<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Cadastrar"
            android:icon="@drawable/adiciona_livro"
            android:title="@string/add_books" />
        <item
            android:id="@+id/nav_Listar"
            android:icon="@drawable/consulta_livro"
            android:title="@string/list_books" />

        <item
            android:id="@+id/nav_Maps"
            android:icon="@drawable/maps_book_store"
            android:title="@string/bookstore_map" />


            <item
                android:id="@+id/nav_Sair"
                android:icon="@drawable/logoff"
                android:title="@string/logoff" />

    </group>
</menu>
