<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padding_bottom_add_book"
    android:paddingLeft="@dimen/padding_left_add_book"
    android:paddingRight="@dimen/Padding_Right_add_book"
    android:paddingTop="@dimen/padding_top_add_book"
    tools:context="com.example.renatogallis.fixcard.AddBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_foto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/ImageButton"
                    android:background="@null"
                    android:onClick="foto"
                    android:src="@drawable/camera" />

                <TextView
                    android:id="@+id/tv_tireAFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_foto"
                    android:text="@string/tv_tire_AFoto" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imagem_hq"
                android:layout_width="@dimen/ImageView_he"
                android:layout_height="@dimen/ImageView_he"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:singleLine="true" />
        </RelativeLayout>

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/hint_edt_add_book"
            android:singleLine="true" />


        <EditText
            android:id="@+id/autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edt_add_book_author"
            android:singleLine="true" />

        <Button
            android:id="@+id/Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:onClick="Salvar"
            android:text="@string/button_add_book" />
    </LinearLayout>
</RelativeLayout>
